--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://bitbucket.org/interativaevents/p20339-action-manager-back#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "keypress": "^0.2.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
