--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://bitbucket.org/interativaevents/p20339-action-manager-back#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "keypress": "^0.2.1",
+    "iohook": "^0.6.5",
+    "puppeteer": "^2.1.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
